<resources>
    <string name="title_activity_home">Níveis - Nosso dinheiro</string>
    <string name="title_activity_level">Jogar - Nosso dinheiro</string>

    <string name="level_progress_bar_info">%d/%d</string>

    <string name="home_app_name">Nosso Dinheiro</string>
    <string name="home_request_error">Sistema indisponível, tente novamente mais tarde.</string>

    <string name="origination_email">E-mail</string>
    <string name="origination_password">Senha</string>
    <string name="origination_password_confirmation">Confirme a senha</string>
    <string name="origination_create_account">Criar conta</string>
    <string name="origination_error_info">Preencha todos os campos</string>
    <string name="origination_error_diff">As senhas devem ser iguais!</string>
    <string name="origination_request_error">Ocorreu um erro ao criar a conta, verifique sua conexão e tente novamente.</string>
    <string name="origination_request_success">"Conta criada com sucesso!"</string>

    <string name="login_button">Entrar</string>
    <string name="login_request_error">Não foi possível autenticar, verifique os seus dados e tente novamente.</string>

    <string name="level_onboarding_ok">OK, entendi</string>
    <string name="school">Escola</string>
    <string name="classroom">Turma</string>
    <string name="student">Aluno</string>
    <string name="logout">Sair</string>
    <string name="toque_para_ouvir_o_texto_da_tela">Toque para ouvir o texto da tela</string>
</resources>
